--- a/Views/Users/ChangePassword.cshtml
+++ b/Views/Users/ChangePassword.cshtml
@@ -9,14 +9,14 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 
 OldPassword:<br />
-<input type="text" data- id="OldPassword" ><br><br>
+<input type="text" data- id="OldPassword"><br><br>
 NewPassword:<br>
-<input type="password" id="NewPassword"  ><br><br>
+<input type="password" id="NewPassword"><br><br>
 RetypePassword:<br>
-<input type="password" id="RetypePassword"    >
+<input type="password" id="RetypePassword">
 
 <span id="validate-status"> </span>
-<br > <br >
+<br> <br>
 <input type="button" id="Save" value="Change" />
 
 
@@ -29,8 +29,8 @@ RetypePassword:<br>
 
     var Data = {
 
-       NewPassword: '',
-OldPassword: '',
+        NewPassword: '',
+        OldPassword: '',
 
     }
     $(document).ready(function () {
@@ -44,18 +44,18 @@ OldPassword: '',
 
 
 
-            if (password1 == password2) {
-                $("#validate-status").text("");
-            }
-            else {
-
-                   $("#validate-status").text("Password doesnot match");
-                }
-
-
-
-
+        if (password1 == password2) {
+            $("#validate-status").text("");
         }
+        else {
+
+            $("#validate-status").text("Password doesnot match");
+        }
+
+
+
+
+    }
 
 
 
@@ -78,16 +78,25 @@ OldPassword: '',
             $.ajax({
                 url: '/Users/ChangePassword',
                 type: 'POST',
+               
+
+
                 data: Data,
+                beforeSend: function (xhr) {
+                  
+                    xhr.setRequestHeader("Authorization", 'Bearer '+ localStorage.getItem('token'));  
+                },
+             
+
                 success: function (data, textStatus, xhr) {
                     console.log(data);
                 },
                 error: function (xhr, textStatus, errorThrown) {
-                    console.log(xhr);
+                    console.log(errorThrown);
                 }
             });
         });
     });
 
-    </script>
+</script>
 
